CodeJudge/data/users/7/2/rte.txt
  File "c.py", line 3
    using namespace std;
                  ^
SyntaxError: invalid syntax
